log
Fri 21 Apr 2023 06:35:13 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
cb26eeb
Fri 21 Apr 2023 06:38:12 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
da28861
Fri 21 Apr 2023 06:39:47 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
8da1a8c
Fri 21 Apr 2023 06:48:44 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|7
total_score: 5/70
a6e83ff
Fri 21 Apr 2023 07:02:47 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
972c89a
Fri 21 Apr 2023 07:20:12 PM UTC: 
 treemap.c | 25 +++++++++++++++++++------
 1 file changed, 19 insertions(+), 6 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6be7f13
Fri 21 Apr 2023 07:25:46 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
e84da08
Fri 21 Apr 2023 07:31:58 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:94:1: error: expected expression before ‘|’ token
   94 | |
      | ^
Compilation failed
dad2537
Fri 21 Apr 2023 07:38:56 PM UTC: 
 treemap.c | 18 ++----------------
 1 file changed, 2 insertions(+), 16 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
9e8ec1a
Fri 21 Apr 2023 07:39:24 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:69:13: error: too few arguments to function ‘tree->lower_than’
   69 |   }else if (tree->lower_than(actualNode->pair->key)) {
      |             ^~~~
Compilation failed
f20ab4d
Sat 22 Apr 2023 08:18:55 PM UTC: 
 treemap.c | 32 +++++++-------------------------
 1 file changed, 7 insertions(+), 25 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:59:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   59 |   TreeNode* parent = NULL;
      |             ^~~~~~
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
da42dd7
Sat 22 Apr 2023 08:21:44 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |   TreeNode* parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
640d708
Sat 22 Apr 2023 08:29:06 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  4|7
total_score: 5/70
20d7508
Sat 22 Apr 2023 08:33:45 PM UTC: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  4|7
total_score: 5/70
b1471ad
Sat 22 Apr 2023 08:34:26 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
2966b24
Sat 22 Apr 2023 08:37:27 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
03da115
Sat 22 Apr 2023 09:12:06 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
81ed68e
Sat 22 Apr 2023 09:56:56 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  8|5
total_score: 15/70
f7f1c5b
Sat 22 Apr 2023 09:58:53 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:110:10: error: too many arguments to function ‘tree->lower_than’
  110 |       if(tree->lower_than(tree,tree->current->pair->key,key) == 0)
      |          ^~~~
treemap.c:111:5: error: expected expression before ‘}’ token
  111 |     }
      |     ^
Compilation failed
f508cd4
Sat 22 Apr 2023 09:59:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:111:5: error: expected expression before ‘}’ token
  111 |     }
      |     ^
Compilation failed
f45f227
